[gd_scene load_steps=4 format=3 uid="uid://by5bcofkf83ks"]

[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/GraphTabManager/DomainGraph/GraphManager.gd" id="1_lhp4v"]
[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/GraphTabManager/DomainGraph/ConnectionHandler.gd" id="2_4wphh"]
[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/GraphTabManager/DomainGraph/Validator.gd" id="3_aghch"]

[node name="DomainGraph" type="GraphEdit"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
show_zoom_label = true
show_arrange_button = false
script = ExtResource("1_lhp4v")

[node name="ConnectionHandler" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_4wphh")

[node name="Validator" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_aghch")

[connection signal="connection_request" from="." to="." method="_on_connection_request"]
[connection signal="connection_to_empty" from="." to="." method="_on_connection_to_empty"]
[connection signal="copy_nodes_request" from="." to="." method="_on_copy_nodes_request"]
[connection signal="delete_nodes_request" from="." to="." method="_on_delete_nodes_request"]
[connection signal="disconnection_request" from="." to="." method="_on_disconnection_request"]
[connection signal="paste_nodes_request" from="." to="." method="_on_paste_nodes_request"]
[connection signal="popup_request" from="." to="." method="_on_popup_request"]
